--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,15 @@
     </mat-radio-group>
 
 <br />
+<mat-form-field>
+  <mat-select placeholder="Favorite food" [(ngModel)]="selectedValue" name="food">
+    <mat-option *ngFor="let food of foods" [value]="food.value">
+      {{food.viewValue}}
+    </mat-option>
+  </mat-select>
+</mat-form-field>
 
+<p> Selected value: {{selectedValue}} </p>
 
 <br />
 <button mat-button>
