--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,67 +1,122 @@
-
-  <form class="example-form">
- <div id="case-images">
-  <div class="case-image">
+<form class="example-form">
+  <div id="case-images">
+    <div class="case-image">
       <input type="file" accept="image/*;capture=camera" onchange="readURL(this);" />
+    </div>
   </div>
-</div>
-<mat-divider></mat-divider>
-   <mat-form-field class="example-full-width">
-      <input matInput placeholder="Titel für diesen Schaden (kurz)" value="">
-    </mat-form-field>
+  <mat-divider></mat-divider>
+  <mat-form-field class="example-full-width">
+    <input matInput placeholder="Titel für diesen Schaden (kurz)" value="">
+  </mat-form-field>
 
-    <mat-divider></mat-divider>
-    
-    <mat-form-field class="example-full-width">
-      <mat-select placeholder="Anlage" [(ngModel)]="selectedValue" name="food">
-        <mat-option *ngFor="let food of foods" [value]="food.value">
-          {{food.viewValue}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-    <mat-form-field class="example-full-width">
-      <input matInput placeholder="Zugewiesen an (E-Mails Adressen, getrennt durch ';')" value="">
-    </mat-form-field>
+  <mat-divider></mat-divider>
 
-    <mat-divider></mat-divider>
-    
-    <label>Schadensart</label>  
-    <mat-radio-group class="example-full-width" class="radio-newline">
-      <mat-radio-button value="1">Betonabplatzung</mat-radio-button>
-      <mat-radio-button value="2">Riss</mat-radio-button>
-      <mat-radio-button value="3">Fugenfüllung lose</mat-radio-button>
-      <mat-radio-button value="4">Einbauteil defekt</mat-radio-button>
-      <mat-radio-button value="5">sonstiges</mat-radio-button>
-    </mat-radio-group>
-    <mat-form-field class="example-full-width">
-      <input matInput placeholder="Schadensart (kurz)" value="">
-    </mat-form-field>
-    
-    <mat-divider></mat-divider>
+  <mat-form-field class="example-full-width">
+    <mat-select placeholder="Anlage" [(ngModel)]="selectedValue" name="anlage">
+      <mat-option *ngFor="let anlage of anlagen" [value]="anlage.value">
+        {{anlage.viewValue}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+  <mat-form-field class="example-full-width">
+    <input matInput placeholder="Zugewiesen an (E-Mails Adressen, getrennt durch ';')" value="">
+  </mat-form-field>
 
-    <mat-form-field class="example-full-width">
-      <textarea matInput placeholder="Beschreibung"></textarea>
-    </mat-form-field>
+  <mat-divider></mat-divider>
 
-    <mat-radio-group class="example-full-width">
-      <mat-radio-button value="1">Option 1</mat-radio-button>
-      <mat-radio-button value="2">Option 2</mat-radio-button>
-    </mat-radio-group>
+  <label>Schadensart</label>
+  <mat-radio-group class="example-full-width" class="radio-newline">
+    <mat-radio-button value="1">Betonabplatzung</mat-radio-button>
+    <mat-radio-button value="2">Riss</mat-radio-button>
+    <mat-radio-button value="3">Fugenfüllung lose</mat-radio-button>
+    <mat-radio-button value="4">Einbauteil defekt</mat-radio-button>
+    <mat-radio-button value="5">sonstiges</mat-radio-button>
+  </mat-radio-group>
+  <mat-form-field class="example-full-width">
+    <input matInput placeholder="Schadensart (kurz)" value="">
+  </mat-form-field>
 
-<mat-form-field class="example-full-width">
-  <mat-select placeholder="Favorite food" [(ngModel)]="selectedValue" name="food">
-    <mat-option *ngFor="let food of foods" [value]="food.value">
-      {{food.viewValue}}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
+  <mat-divider></mat-divider>
 
-<p> Selected value: {{selectedValue}} </p>
+  <mat-form-field class="">
+    <input matInput placeholder="Lage" value="">
+  </mat-form-field>
+  <button mat-stroked-button>
+    GPS
+  </button>
 
-<br />
-<button mat-stroked-button>
-  Schaden melden
-</button>
+  <mat-divider></mat-divider>
+
+  <mat-form-field class="">
+    <input matInput placeholder="Dimension" value="">
+  </mat-form-field>
+  <mat-radio-group class="" style="display:inline-block">
+    <mat-radio-button value="1">m*m</mat-radio-button>
+    <mat-radio-button value="2">lfm</mat-radio-button>
+  </mat-radio-group>
+
+  <mat-divider></mat-divider>
+
+  <mat-form-field class="example-full-width">
+    <textarea rows="6" matInput placeholder="Beschreibung"></textarea>
+  </mat-form-field>
+
+  <mat-divider></mat-divider>
+
+  <section class="example-section">
+    <mat-checkbox>Sonnig</mat-checkbox>
+    <mat-checkbox>Trocken</mat-checkbox>
+    <mat-checkbox>Bewölkt</mat-checkbox>
+    <mat-checkbox>Neblig</mat-checkbox>
+    <mat-checkbox>Regen</mat-checkbox>
+    <mat-checkbox>Schnee</mat-checkbox>
+  </section>
+  <mat-form-field class="example-full-width">
+    <input matInput placeholder="Temperatur °C" value="">
+  </mat-form-field>
+<label>Priorität</label>
+  <mat-radio-group class="example-full-width">
+    <mat-radio-button class="as-block" value="1">Beobachten</mat-radio-button>
+    <mat-radio-button class="as-block" value="2">Innerhalb der Routineinstandhaltung</mat-radio-button>
+    <mat-radio-button class="as-block" value="3">sofort</mat-radio-button>
+  </mat-radio-group>
+
+  <mat-divider></mat-divider>
+
+  <mat-form-field class="example-full-width">
+    <mat-select placeholder="Begehung" [(ngModel)]="selectedBegehung" name="begehungCurrent">
+      <mat-option *ngFor="let begehungCurrent of begehungen" [value]="begehungCurrent.value">
+        {{begehungCurrent.viewValue}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <mat-divider></mat-divider>
+
+  <mat-form-field class="example-full-width">
+    <textarea rows="6" matInput placeholder="Kommentare"></textarea>
+  </mat-form-field>
+
+  <mat-divider></mat-divider>
+
+  <mat-form-field class="example-full-width">
+    <input matInput placeholder="Art der Schadensbehebung" value="">
+  </mat-form-field>
+
+  <mat-divider></mat-divider>
+
+  <mat-form-field class="example-full-width">
+    <mat-select placeholder="Problemstatus" [(ngModel)]="selectedValueproblemstatus" name="problemstatus">
+      <mat-option *ngFor="let problemstatus of problemstatusWerte" [value]="problemstatus.value">
+        {{problemstatus.viewValue}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <br />
+  <button mat-stroked-button>
+    Schaden melden
+  </button>
 
 
-  </form>
+</form>
